# application/src/main/java/org/factory/dst/process/dto/AverageDto.java
@@ -1,0 +1,73 @@
+package org.factory.dst.process.dto;
+
+import org.apache.commons.lang3.builder.EqualsBuilder;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
+import org.apache.commons.lang3.builder.ToStringBuilder;
+
+import javax.validation.constraints.NotNull;
+import java.time.OffsetDateTime;
+
+/**
+ * Data transfer object representing an average value.
+ */
+public class AverageDto {
+
+    @NotNull
+    private OffsetDateTime timestamp;
+
+    private double value;
+
+    public AverageDto() {
+    }
+
+    public AverageDto(OffsetDateTime timestamp, double value) {
+        this.timestamp = timestamp;
+        this.value = value;
+    }
+
+    public OffsetDateTime getTimestamp() {
+        return timestamp;
+    }
+
+    public void setTimestamp(OffsetDateTime timestamp) {
+        this.timestamp = timestamp;
+    }
+
+    public double getValue() {
+        return value;
+    }
+
+    public void setValue(double value) {
+        this.value = value;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+
+        if (o == null || getClass() != o.getClass()) return false;
+
+        AverageDto that = (AverageDto) o;
+
+        return new EqualsBuilder()
+                .append(value, that.value)
+                .append(timestamp, that.timestamp)
+                .isEquals();
+    }
+
+    @Override
+    public int hashCode() {
+        return new HashCodeBuilder(17, 37)
+                .append(timestamp)
+                .append(value)
+                .toHashCode();
+    }
+
+    @Override
+    public String toString() {
+        return new ToStringBuilder(this)
+                .append("timestamp", timestamp)
+                .append("value", value)
+                .toString();
+    }
+}
